changed pipeline layout for 2 use cases

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/samtools_merge.lgt_infected_d.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/samtools_merge.lgt_infected_d.config
@@ -5,14 +5,14 @@ classification = LGT
 
 [input]
 ;; List containing BAM files
-$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/concatenate_files/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/lgt_infected.bam.list
+$;INPUT_FILE_LIST$; = $;REPOSITORY_ROOT$;/output_repository/concatenate_files/$;PIPELINEID$;_$;OUTPUT_TOKEN$;/lgt_infected_d.bam.list
 $;INPUT_FILE$; =
 $;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
 $;INPUT_EXTENSION$; = raw
 
 [output]
-$;OUTPUT_TOKEN$; = lgt_infected
+$;OUTPUT_TOKEN$; = lgt_infected_d
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.bam.list
 
