--- a/package-lgtseek/docs/lgtseek_classify_reads.config
+++ b/package-lgtseek/docs/lgtseek_classify_reads.config
@@ -28,7 +28,8 @@ $;LGT_DONOR_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;LGT_DO
 $;LGT_RECIPIENT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;LGT_RECIPIENT_TOKEN$;.bam.list
 $;ALL_DONOR_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;ALL_DONOR_TOKEN$;.bam.list
 $;ALL_RECIPIENT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.$;ALL_RECIPIENT_TOKEN$;.bam.list
-$;LGT_INFECTED_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.lgt_infected_recipient.bam.list 
+$;LGT_INFECTED_DONOR_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.lgt_infected_donor.bam.list 
+$;LGT_INFECTED_RECIPIENT_BAM_OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.lgt_infected_recipient.bam.list 
 
 [component]
 $;COMPONENT_NAME$; = lgtseek_classify_reads
