--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/concatenate_files.lgt_infected_r.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/concatenate_files.lgt_infected_r.config
@@ -5,12 +5,12 @@ classification=utility
 ; All files in input list will be concatenated into output file. Can comma-separate lists to concatenate all elements.  
 $;INPUT_FILE_LIST$;=
 ; Comma-separated string of input files
-$;INPUT_FILES$; = $;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt_recipient/filter_dups_lc_seqs.bam.list,$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_infected/filter_dups_lc_seqs.bam.list
+$;INPUT_FILES$; = $;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt_recipient/filter_dups_lc_seqs.bam.list,$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_infected_r/filter_dups_lc_seqs.bam.list
 
 [output]
-$;OUTPUT_TOKEN$;=lgt_infected
+$;OUTPUT_TOKEN$;=lgt_infected_r
 $;OUTPUT_DIRECTORY$;=$;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
-$;OUTPUT_FILE$;=$;OUTPUT_DIRECTORY$;/lgt_infected.bam.list
+$;OUTPUT_FILE$;=$;OUTPUT_DIRECTORY$;/lgt_infected_r.bam.list
 
 [component]
 $;COMPONENT_NAME$;=concatenate_files
