added a few UI elements

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blastdb_alias.euk.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blastdb_alias.euk.config
@@ -7,7 +7,7 @@ $;DB_TYPE$; = nucl
 
 [input]
 ;; Path to newline-separated list of accession IDs
-$;INPUT_FILE$; = $;METAZOA_ACC_LIST$;
+$;INPUT_FILE$; =
 ;; Path and prefix of database to create subset out of
 $;DATABASE_PATH$; = $;NCBI_BLAST_NT$;
 
@@ -31,12 +31,10 @@ $;REVISION$;            = $Revision$
 $;TEMPLATE_XML$; = $;DOCS_DIR$;/$;COMPONENT_NAME$;.xml
 
 ;the following keys are replaced at runtime by the invocation script
-$;COMPONENT_CONFIG$; = 
-$;COMPONENT_XML$; = 
-$;PIPELINE_XML$; = 
-$;PIPELINEID$; = 
+$;COMPONENT_CONFIG$; =
+$;COMPONENT_XML$; =
+$;PIPELINE_XML$; =
+$;PIPELINEID$; =
 
 [include]
 $;PROJECT_CONFIG$;=
-
-
