--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.config
@@ -6,6 +6,12 @@ $;INPUT_FILE_LIST$; = $;DONOR_LIST$;
 $;INPUT_FILE$; = $;HOST_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;HOST_LIST$;
 
+[blast_db_alias bac]
+$;INPUT_FILE$; = $;BACTERIA_ACC_LIST$;
+
+[blast_db_alias euk]
+$;INPUT_FILE$; = $;METAZOA_ACC_LIST$;
+
 [blast_lgt_finder lgt_d]
 $;LINEAGE$; = $;EUK_LINEAGE$;
 
