forgot to add blastdb_alias to other use_case config files

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.recipient_only.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.recipient_only.config
@@ -11,6 +11,12 @@ $;INPUT_FILE_LIST$; = $;REFSEQ_LIST$;
 $;INPUT_FILE$; = $;HOST_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;HOST_LIST$;
 
+[blastdb_alias bac]
+$;INPUT_FILE$; = $;BACTERIA_ACC_LIST$;
+
+[blastdb_alias euk]
+$;INPUT_FILE$; = $;METAZOA_ACC_LIST$;
+
 [blast_lgt_finder lgt_d]
 $;LINEAGE$; = $;EUK_LINEAGE$;
 
