--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.donor_only.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/pipeline.donor_only.config
@@ -7,6 +7,12 @@ $;QUERY_FILE$; = $;REPOSITORY_ROOT$;/output_repository/sra2fastq/$;PIPELINEID$;_
 $;INPUT_FILE$; = $;DONOR_REFERENCE$;
 $;INPUT_FILE_LIST$; = $;DONOR_LIST$;
 
+[blastdb_alias bac]
+$;INPUT_FILE$; = $;BACTERIA_ACC_LIST$;
+
+[blastdb_alias euk]
+$;INPUT_FILE$; = $;METAZOA_ACC_LIST$;
+
 [blast_lgt_finder lgt_d]
 $;LINEAGE$; = $;EUK_LINEAGE$;
 
