changing default database for blastdb_alias component

--- a/package-lgtseek/software.config
+++ b/package-lgtseek/software.config
@@ -16,7 +16,7 @@ $;JAVA_EXEC$;=/usr/lib/jvm/java-8-openjdk-amd64/bin/java
 
 [common inputs]
 $;DB_DIR$;=/local/db/
-$;NCBI_BLAST_NT$; = nt
+$;NCBI_BLAST_NT$; = /mnt/blast/nt
 
 ;;$;METAZOA_ACC_LIST$; = $;DB_DIR$;/metazoa.accession.txt
 ;;$;BACTERIA_ACC_LIST$; = $;DB_DIR$;/bacteria.accession.txt
