--- a/package-lgtseek/software.config
+++ b/package-lgtseek/software.config
@@ -18,8 +18,8 @@ $;JAVA_EXEC$;=/usr/lib/jvm/java-8-openjdk-amd64/bin/java
 $;DB_DIR$;=/local/db/
 $;NCBI_BLAST_NT$; = /mnt/blast/nt
 
-;;$;METAZOA_ACC_LIST$; = $;DB_DIR$;/metazoa.accession.txt
-;;$;BACTERIA_ACC_LIST$; = $;DB_DIR$;/bacteria.accession.txt
+$;METAZOA_ACC_LIST$; = /mnt/input_data/acc_list/metazoa.accession.txt
+$;BACTERIA_ACC_LIST$; = /mnt/input_data/acc_list/bacteria.accession.txt
 
 [component filter_dups_lc_seqs]
 $;PRINSEQ_EXEC$;=/opt/packages/prinseq/prinseq-lite.pl
