--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blastn_plus.nt_d.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline/blastn_plus.nt_d.config
@@ -3,7 +3,7 @@ classification = alignment / pairwise
 
 [parameters]
 ;-evalue  Expectation value (E) default = 10.0
-$;EXPECT$; = 1e-5
+$;EXPECT$; = 1
 ;-dust Filter query sequence with DUST (Format: 'yes', 'level window linker', or 'no' to disable
 $;FILTER$; = no
 ;-max_target_seqs Maximum number of aligned sequences to keep default=150
