adding concatenation of pairwise blast results

--- a/package-lgtseek/docs/gather_lgtseek_files.config
+++ b/package-lgtseek/docs/gather_lgtseek_files.config
@@ -23,6 +23,9 @@ $;RECIPIENT_LGT_CLONE_OUT$;=
 ;; Path to concatenated m8 BlastN results
 $;DONOR_BLAST_M8_OUT$;=
 $;RECIPIENT_BLAST_M8_OUT$;=
+;; Path to concatenated pairwise BlastN results
+$;DONOR_BLAST_PAIRWISE_OUT$;=
+$;RECIPIENT_BLAST_PAIRWISE_OUT$;=
 ;; Classification counts file
 $;CLASSIFICATION_COUNTS_FILE$;=
 
