--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_Post_Analysis/gather_lgtseek_files.default.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_Post_Analysis/gather_lgtseek_files.default.config
@@ -20,8 +20,11 @@ $;LGT_DONOR_MPILEUP$;=$;REPOSITORY_ROOT$;/output_repository/lgt_mpileup/$;PIPELI
 $;DONOR_LGT_CLONE_OUT$;=$;REPOSITORY_ROOT$;/output_repository/blast_lgt_finder/$;PIPELINEID$;_lgt_d/i1/g1/blastn_by_clone.txt
 $;RECIPIENT_LGT_CLONE_OUT$;=$;REPOSITORY_ROOT$;/output_repository/blast_lgt_finder/$;PIPELINEID$;_lgt_r/i1/g1/blastn_by_clone.txt
 ;; Path to concatenated m8 BlastN results
-$;DONOR_BLAST_M8_OUT$;=$;REPOSITORY_ROOT$;/output_repository/concatenate_files/$;PIPELINEID$;_blast_d/blastn.out
-$;RECIPIENT_BLAST_M8_OUT$;=$;REPOSITORY_ROOT$;/output_repository/concatenate_files/$;PIPELINEID$;_blast_r/blastn.out
+$;DONOR_BLAST_M8_OUT$;=$;REPOSITORY_ROOT$;/output_repository/concatenate_files/$;PIPELINEID$;_blast_d_m8/blastn.m8.out
+$;RECIPIENT_BLAST_M8_OUT$;=$;REPOSITORY_ROOT$;/output_repository/concatenate_files/$;PIPELINEID$;_blast_r_m8/blastn.m8.out
+;; Path to concatenated pairwise BlastN results
+$;DONOR_BLAST_PAIRWISE_OUT$;=$;REPOSITORY_ROOT$;/output_repository/concatenate_files/$;PIPELINEID$;_blast_d_pairwise/blastn.pairwise.out
+$;RECIPIENT_BLAST_PAIRWISE_OUT$;=$;REPOSITORY_ROOT$;/output_repository/concatenate_files/$;PIPELINEID$;_blast_r_pairwise/blastn.pairwise.out
 
 ;; Classification counts file
 $;CLASSIFICATION_COUNTS_FILE$;=$;REPOSITORY_ROOT$;/output_repository/lgtseek_classify_reads/$;PIPELINEID$;_default/classification.counts
