fixing some things still linked to download_sra

--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_SRA/sra2fastq.default.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_SRA/sra2fastq.default.config
@@ -12,7 +12,7 @@ $;RUN_ID$;=
 [input]
 $;INPUT_FILE_LIST$; =
 $;INPUT_FILE$; =
-$;INPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/download_sra/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
+$;INPUT_DIRECTORY$; =
 ;; the following is only used when iterating over an INPUT_DIRECTORY
 $;INPUT_EXTENSION$; = sra
 
@@ -20,7 +20,6 @@ $;INPUT_EXTENSION$; = sra
 $;OUTPUT_TOKEN$; = default
 $;OUTPUT_DIRECTORY$; = $;REPOSITORY_ROOT$;/output_repository/$;COMPONENT_NAME$;/$;PIPELINEID$;_$;OUTPUT_TOKEN$;
 $;OUTPUT_LIST$; = $;OUTPUT_DIRECTORY$;/$;COMPONENT_NAME$;.list
-
 
 [component]
 $;COMPONENT_NAME$; = sra2fastq
