fixing gather_lgtseek_files issue with Use Case 2

--- a/package-lgtseek/docs/gather_lgtseek_files.config
+++ b/package-lgtseek/docs/gather_lgtseek_files.config
@@ -6,9 +6,8 @@ classification = utility
 $;RUN_ID$;=
 
 ;; Path to various classified BAM output files
-$;LGT_BAM_OUT$;=
-$;RECIPIENT_BAM_OUT$;=
-$;DONOR_BAM_OUT$;=
+$;RECIPIENT_LGT_BAM_OUT$;=
+$;DONOR_LGT_BAM_OUT$;=
 ;; BAM files created by validating BlastN results
 $;DONOR_LGT_BLAST_BAM_OUT$;=
 $;RECIPIENT_LGT_BLAST_BAM_OUT$;=
