--- a/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_Post_Analysis/gather_lgtseek_files.default.config
+++ b/package-lgtseek/pipeline_templates/LGT_Seek_Pipeline_Post_Analysis/gather_lgtseek_files.default.config
@@ -6,8 +6,8 @@ classification = utility
 $;RUN_ID$;=
 
 ;; Path to various classified BAM output files
-$;LGT_DONOR_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt_donor/filter_dups_lc_seqs.bam.list
-$;LGT_RECIPIENT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt_recipient/filter_dups_lc_seqs.bam.list
+$;DONOR_LGT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt_donor/filter_dups_lc_seqs.bam.list
+$;RECIPIENT_LGT_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/filter_dups_lc_seqs/$;PIPELINEID$;_lgt_recipient/filter_dups_lc_seqs.bam.list
 $;DONOR_LGT_BLAST_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/bwa_aln/$;PIPELINEID$;_validation_d/bwa_aln.bam.list
 $;RECIPIENT_LGT_BLAST_BAM_OUT$;=$;REPOSITORY_ROOT$;/output_repository/bwa_aln/$;PIPELINEID$;_validation_r/bwa_aln.bam.list
 ;; Path to various mpileup output files
